<resources>
    <string name="picture_camera_roll">相机胶卷</string>
    <string name="picture_cancel">取消</string>
    <string name="picture_take_picture">拍摄</string>
    <string name="picture_rule">不能同时选择图片或视频</string>
    <string name="picture_message_max_num">你最多可以选择%1$s张图片</string>
    <string name="picture_min_video_num">视频最低选择不能少于%1$s个</string>
    <string name="picture_message_video_max_num">你最多可以选择%1$s个视频</string>
    <string name="picture_preview">预览</string>
    <string name="picture_please">请稍候...</string>
    <string name="picture_done_front_num">确定(%1$d/%2$d)</string>
    <string name="picture_completed">已完成</string>
    <string name="picture_done">完成</string>
    <string name="picture_please_select">请选择</string>
    <string name="picture_empty_title">无视频或照片\n</string>
    <string name="picture_empty_audio_title">无音频文件\n</string>
    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="picture_audio_empty">你可以使用系统录音录制音频</string>
    <string name="picture_min_img_num">图片最低选择不能少于%1$s张</string>
    <string name="gif_tag">动图</string>
    <string name="picture_jurisdiction">读取内存卡权限被拒绝</string>
    <string name="picture_camera">获取系统相机权限被拒绝</string>
    <string name="picture_audio">获取系统录音权限被拒绝</string>
    <string name="picture_video_toast">视频不可预览</string>
    <string name="picture_record_video">录视频</string>
    <string name="picture_photograph">拍照</string>
    <string name="picture_long_chart">长图</string>
    <string name="picture_warning">暂无媒体文件！</string>
    <string name="picture_prompt">提示</string>
    <string name="picture_prompt_content">是否保存图片至手机？</string>
    <string name="picture_save_error">图片保存失败</string>
    <string name="picture_save_success">图片保存成功至</string>
    <string name="picture_all_audio">所有音频</string>
    <string name="picture_tape">录音</string>
    <string name="picture_play_audio">播放</string>
    <string name="picture_stop_audio">停止</string>
    <string name="picture_quit_audio">退出</string>
    <string name="picture_pause_audio">暂停</string>
    <string name="picture_error">图片已损坏</string>
    <string name="picture_video_error">视频已损坏</string>
    <string name="picture_audio_error">音频已损坏</string>
    <string name="picture_confirm">确定</string>
</resources>
