<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.luck.picture.lib.PictureSelectorActivity">

    <LinearLayout
        android:id="@+id/id_titleBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_picture_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?colorPrimary"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/picture_left_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="?attr/picture.leftBack.icon" />

            <TextView
                android:id="@+id/picture_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="2dp"
                android:drawableRight="?attr/picture.arrow_down.icon"
                android:ellipsize="end"
                android:gravity="center"
                android:maxEms="11"
                android:padding="6dp"
                android:text="@string/picture_camera_roll"
                android:textColor="?picture.title.textColor"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/picture_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:padding="10dp"
                android:visibility="gone"
                android:text="@string/picture_cancel"
                android:textColor="?picture.right.textColor"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/id_ll_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:enabled="false"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/picture_tv_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/picture_please_select"
                    android:textColor="?picture.complete.textColor"
                    android:background="?picture.complete.bg"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/picture_tv_img_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="?attr/picture.num.style"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/picture.bottom.bg"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/picture_id_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:enabled="false"
            android:padding="12dp"
            android:text="@string/picture_preview"
            android:textColor="?attr/picture.preview.textColor"
            android:textSize="14sp" />
    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/picture_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_bottom"
        android:layout_below="@id/id_titleBar"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/picture_empty"
        android:textColor="@color/tab_color_false"
        android:textSize="18sp"
        android:visibility="invisible" />

</RelativeLayout>
